--- a/large/index.html
+++ b/large/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#">Videos</a></li>
                
             </ul>
-            <a href="index.html" class="logo">destiny the game </a>
+            <a href="index.html" class="logo">trump is bae </a>
         </nav>
 
     </div>
